--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VITE_SERVER_URL = https://xcellify.com
+VITE_SERVER_URL = https://uat.xcellify.com
 VITE_ENV = PROD
 
 VITE_GOOGLE_CLIENT_ID = 348252864229-knvikkfilg4hu7tc2k6en3ltncca6v4j.apps.googleusercontent.com
