--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.2.0",
+    "react-error-boundary": "^5.0.0",
     "react-facebook": "^9.0.12",
     "react-i18next": "^15.1.0",
     "react-icons": "^5.3.0",
