Strapi url update

--- a/.env.production
+++ b/.env.production
@@ -7,4 +7,4 @@ VITE_GOOGLE_CLIENT_SECRET = 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
 VITE_FACEBOOK_CLIENT_ID = 1524500401576130
 VITE_FACEBOOK_CLIENT_SECRET = 562ba31ec996f72e937dee1d589f72ab
 
-VITE_STRAPI_URL = http://74.225.242.232:1337
+VITE_STRAPI_URL = https://strapi.xcellify.com
