--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-facebook": "^9.0.12",
     "react-i18next": "^15.1.0",
     "react-icons": "^5.3.0",
+    "react-joyride": "^2.9.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.9.0",
