--- a/.env.staging
+++ b/.env.staging
@@ -7,4 +7,4 @@ VITE_GOOGLE_CLIENT_SECRET = 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
 VITE_FACEBOOK_CLIENT_ID = 530312543254735
 VITE_FACEBOOK_CLIENT_SECRET = 97b30794e4001eb85fb0bacd00ffa136
 
-VITE_STRAPI_URL = http://74.225.242.232:1337
+VITE_STRAPI_URL = https://dev-strapi.xcellify.com
