--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-toastify": "^11.0.2",
     "recharts": "^2.15.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.5",
     "yup": "^1.5.0"
   },
   "devDependencies": {
