Rich text editor added with get view

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.474.0",
     "mobx": "^6.13.5",
     "mobx-react": "^9.1.1",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.2.0",
@@ -33,7 +34,9 @@
     "react-i18next": "^15.1.0",
     "react-icons": "^5.3.0",
     "react-joyride": "^2.9.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.9.0",
     "react-simple-captcha": "^9.3.1",
