--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "mobx-react": "^9.1.1",
     "quill": "^2.0.3",
     "react": "^18.3.1",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.3.1",
-    "react-easy-crop": "^5.2.0",
     "react-error-boundary": "^5.0.0",
     "react-facebook": "^9.0.12",
     "react-i18next": "^15.1.0",
