--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.11",
-    "vite-plugin-externals": "^0.6.2"
+    "vite-plugin-externals": "^0.6.2",
+    "vite-plugin-pwa": "^0.21.1"
   }
 }
