--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.9.0",
+    "react-signature-canvas": "^1.1.0-alpha.1",
     "react-simple-captcha": "^9.3.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.2",
@@ -51,6 +52,7 @@
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-signature-canvas": "^1.0.7",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
