--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "country-state-city": "^3.2.1",
+    "docx": "^9.4.1",
+    "file-saver": "^2.0.5",
     "i18next": "^23.16.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
