complicance details automate form

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "docx": "^9.4.1",
+    "docxtemplater": "^3.61.1",
+    "docxtemplater-image-module-free": "^1.1.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.9.4",
     "i18next": "^23.16.4",
@@ -31,6 +33,7 @@
     "mobx": "^6.13.5",
     "mobx-react": "^9.1.1",
     "onnxruntime-web": "^1.21.0-dev.20250206-d981b153d3",
+    "pizzip": "^3.1.8",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-cropper": "^2.3.3",
