--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ VITE_FACEBOOK_CLIENT_ID = 530312543254735
 VITE_FACEBOOK_CLIENT_SECRET = 97b30794e4001eb85fb0bacd00ffa136
 
 VITE_STRAPI_URL = http://74.225.242.232:1337
+
+VITE_GEMINI_API_KEY=AIzaSyAIuKCo1qXv3EPOSrsX-kWrv3NJH-jZymU
