--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@imgly/background-removal": "^1.6.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.7.7",
     "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
@@ -62,7 +63,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-signature-canvas": "^1.0.7",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "eslint": "^9.13.0",
@@ -72,7 +73,7 @@
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "vite": "^5.4.11",
+    "vite": "^5.4.19",
     "vite-plugin-externals": "^0.6.2",
     "vite-plugin-pwa": "^0.21.1"
   }
